diesel_compile_tests/tests/fail/returning_cannot_be_called_twice.stderr
error[E0599]: no method named `returning` found for struct `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::internal::derives::as_expression::Bound<diesel::sql_types::Text, &str>>>>, diesel::query_builder::returning_clause::ReturningClause<columns::id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:22:11
   |
22 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method

error[E0599]: no method named `returning` found for struct `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<columns::name, diesel::internal::derives::as_expression::Bound<diesel::sql_types::Text, &std::string::String>>>,), users::table>, diesel::query_builder::insert_statement::private::Insert, diesel::query_builder::returning_clause::ReturningClause<columns::id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:27:11
   |
27 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method

error[E0599]: no method named `returning` found for struct `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::update_statement::changeset::Assign<columns::name, diesel::internal::derives::as_expression::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<columns::id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:30:11
   |
30 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method
